<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">ToGetThere</string>
    <string name="app_email">to.get.there.project@gmail.com</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search_hint">Search in this category...</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">660391970742830</string>
    <string name="error">Error</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">permission_not_granted</string>
    <string name="ok">OK</string>
    <string name="hello_user">hello_user</string>
    <string name="success">success</string>
    <string name="successfully_posted_post">successfully_posted_post</string>
    <string name="exception">exception</string>
    <string name="status_update">status_update</string>
    <string name="action_finish">Finish</string>
    <string name="photo_post">photo_post</string>
    <string name="no_friends_selected">no_friends_selected</string>
    <string name="you_picked">you_picked</string>
    <string name="no_place_selected">no_place_selected</string>
    <string name="pick_seattle_place">pick_seattle_place</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="add_new_location">Add new</string>
    <string name="rank_location">Rank</string>
    <string name="title_template_category">Category<xliff:g id="step_number">%1$d</xliff:g>: Lorem Ipsum</string>
    <string name="get_verified_1">Is this your business?</string>
    <string name="get_verified_2">Contact us to get verified!</string>
    <string name="volunteer">I volunteer!</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveChanges">Save Changes</string>
    <string name="willingYes">I volunteer!</string>
    <string name="willingNo">Not volunteering</string>
    <string name="willingtoVolunteer">Willing to volunteer?</string>
    <string name="discardChanges">Discard</string>

    <!-- Types -->
    <string-array name="types">
        <item>Medical</item>
        <item>Transportation</item>
        <item>Public Services</item>
        <item>Shopping</item>
        <item>Restaurants</item>
    </string-array>

    <!-- Add New SP -->
    <string name="title_activity_add_sp">Add a new location</string>
    <string name="addNewSPName">Name</string>
    <string name="addNewSPAddress">Address</string>
    <string name="addNewSPDescription">Description</string>
    <string name="addNewSPType">Type: </string>
    <string name="addNewSPPhone">Phone Number</string>
    <string name="addNewSPWebsite">Website</string>
    <string name="addNewSPDiscount">Discount Given \[\%\]</string>
    <string name="addNewSPRankText">How is this place accecible?</string>
    <string name="addNewSPSubmitButton">Submit</string>
    <string name="addNewSPSpinnerPrompt"></string>

    <!-- Add New Task -->
    <string name="title_activity_add_new_task">How can we help you?</string>
    <string name="addNewTaskTitle">Title: Like \"Change light balb\"\.\.\.</string>
    <string name="addNewTaskDate">When?</string>
    <string name="addNewTaskAddress">Where?</string>
    <string name="addNewTaskBody">Describe how can we help you\.\.\.</string>
    <string name="addNewTaskPhone">Phone Number</string>
    <string name="addNewTaskSubmitButton">Submit</string>

    <!-- Edit SP -->
    <string name="title_activity_edit_sp">Edit Location</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_reviews_list" >ReviewsListActivity</string>

</resources>